--- a/css/styles.css
+++ b/css/styles.css
@@ -141,14 +141,20 @@ img {
 }
 /*-------------------------MAIN-----------------------*/
 /*----------------HERO----------------*/
-.hero-container {
-  /* padding-top: 188px;
-  padding-bottom: 188px; */
-}
 .hero {
   background-color: var(--dark);
+  max-width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
+  margin: 0 auto;
+  background-image: linear-gradient(
+      var(--hero-background),
+      var(--hero-background)
+    ),
+    url(../images/people_office.jpg);
+  /* background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; */
 }
 
 .hero-title {
@@ -205,6 +211,17 @@ img {
   flex-basis: calc((100% - 72px) / 4);
 } */
 
+.why-are-we-icons-box {
+  width: 264px;
+  height: 112px;
+  background-color: var(--light);
+  border-radius: 4px;
+  padding: 24px 100px;
+}
+.why-are-we-icons {
+  width: 64px;
+  height: 64px;
+}
 .why-are-we-list-title {
   margin-bottom: 8px;
   font-weight: 500;
@@ -271,6 +288,8 @@ img {
 .team-list-item {
   border-radius: 0px 0px 4px 4px;
   background-color: var(--white-background);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .team-list-block {
   padding: 32px 16px;
@@ -292,6 +311,79 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+.team-socials-list {
+  display: flex;
+  gap: 24px;
+}
+.team-socials-item {
+  width: 40px;
+  height: 40px;
+}
+.team-socials-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-brand);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.team-socials-link:hover,
+.team-socials-link:focus {
+  background-color: var(--pressed-state);
+}
+.team-icons {
+  width: 16px;
+  height: 16px;
+}
+
+/*----------------CUSTOMERS----------------*/
+.customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+/* .container {
+} */
+.customers-title {
+  margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--dark);
+}
+.customers-list {
+  display: flex;
+  gap: 24px;
+}
+.customers-list-item {
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+.customers-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  border: 1px solid var(--subtle-text);
+}
+.customers-link:hover,
+.customers-link:focus {
+  border-color: var(--pressed-state);
+}
+.customers-icon {
+  width: 104px;
+  height: 56px;
+  fill: var(--subtle-text);
+}
+.customers-link:hover .customers-icon,
+.customers-link:focus .customers-icon {
+  fill: #404bbf;
 }
 /*----------------PORTFOLIO----------------*/
 .portfolio {
@@ -331,6 +423,8 @@ img {
   background-color: var(--pressed-state);
   color: var(--white-background);
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .project-card-list {
@@ -342,6 +436,12 @@ img {
 .project-card-item {
   flex-basis: calc((100% - 48px) / 3);
 }
+.project-card-item:hover,
+.project-card-item:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .card-style {
   padding: 32px 16px;
 
@@ -371,6 +471,11 @@ img {
   padding: 100px 0px;
   background-color: var(--dark);
 }
+.footer-conteiner {
+  display: flex;
+  align-items: baseline;
+  gap: 120px;
+}
 .footer-link {
   display: inline-block;
   margin-bottom: 16px;
@@ -392,4 +497,40 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--light);
+}
+/* .footer-soc-conteiner {
+  margin-right: auto;
+} */
+.footer-soc-title {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white-background);
+}
+.footer-socials-list {
+  display: flex;
+  gap: 24px;
+}
+.footer-socials-item {
+  width: 40px;
+  height: 40px;
+}
+.footer-socials-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-brand);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-socials-link:hover,
+.footer-socials-link:focus {
+  background-color: var(--success);
+}
+.footer-icons {
+  width: 24px;
+  height: 24px;
 }
