--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,8 @@ img {
 /*----------------HEADER----------------*/
 .header {
   border-bottom: 1px solid var(--accent);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header .container {
   display: flex;
@@ -152,9 +154,9 @@ img {
       var(--hero-background)
     ),
     url(../images/people_office.jpg);
-  /* background-repeat: no-repeat;
+  background-repeat: no-repeat;
   background-position: center;
-  background-size: cover; */
+  background-size: cover;
 }
 
 .hero-title {
@@ -212,16 +214,20 @@ img {
 } */
 
 .why-are-we-icons-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
   width: 264px;
   height: 112px;
   background-color: var(--light);
   border-radius: 4px;
-  padding: 24px 100px;
+  /* padding: 24px 100px; */
 }
-.why-are-we-icons {
+/* .why-are-we-icons {
   width: 64px;
   height: 64px;
-}
+} */
 .why-are-we-list-title {
   margin-bottom: 8px;
   font-weight: 500;
@@ -313,8 +319,10 @@ img {
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
+/*--------------------------------------------------Питання про justify-content----------------------*/
 .team-socials-list {
   display: flex;
+  justify-content: center;
   gap: 24px;
 }
 .team-socials-item {
@@ -335,8 +343,8 @@ img {
   background-color: var(--pressed-state);
 }
 .team-icons {
-  width: 16px;
-  height: 16px;
+  /*-----------------------------Питання про колір-------------------*/
+  fill: var(--light);
 }
 
 /*----------------CUSTOMERS----------------*/
@@ -371,19 +379,18 @@ img {
   justify-content: center;
   border-radius: 4px;
   border: 1px solid var(--subtle-text);
+  color: var(--subtle-text);
 }
 .customers-link:hover,
 .customers-link:focus {
   border-color: var(--pressed-state);
 }
 .customers-icon {
-  width: 104px;
-  height: 56px;
-  fill: var(--subtle-text);
+  fill: currentColor;
 }
 .customers-link:hover .customers-icon,
 .customers-link:focus .customers-icon {
-  fill: #404bbf;
+  color: #404bbf;
 }
 /*----------------PORTFOLIO----------------*/
 .portfolio {
@@ -436,8 +443,12 @@ img {
 .project-card-item {
   flex-basis: calc((100% - 48px) / 3);
 }
-.project-card-item:hover,
-.project-card-item:focus {
+.project-card-link {
+  display: block;
+}
+/*-------------------------Чому ефект тіні при ховері та хокусі потрібно задавати саме на посилання--------*/
+.project-card-link:hover,
+.project-card-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -474,7 +485,9 @@ img {
 .footer-conteiner {
   display: flex;
   align-items: baseline;
-  gap: 120px;
+}
+.footer-info-conteiner {
+  margin-right: 120px;
 }
 .footer-link {
   display: inline-block;
@@ -501,7 +514,7 @@ img {
 /* .footer-soc-conteiner {
   margin-right: auto;
 } */
-.footer-soc-title {
+.footer-soc-text {
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
@@ -511,7 +524,7 @@ img {
 }
 .footer-socials-list {
   display: flex;
-  gap: 24px;
+  gap: 16px;
 }
 .footer-socials-item {
   width: 40px;
@@ -531,6 +544,5 @@ img {
   background-color: var(--success);
 }
 .footer-icons {
-  width: 24px;
-  height: 24px;
+  fill: var(--light);
 }
